--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,3 +3,5 @@
 <%= link_to "<< Back to Articles List", articles_path %>
 
 <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "U sure u wnna delete the article fam?"} %>
+
+<%= link_to "Edit", edit_article_path(@article) %>
